--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RestaurantInfoActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login" />
+        <activity android:name=".RestaurantInfoActivity" />
         <activity android:name=".SearchFragment" />
         <activity android:name=".MainActivity">
             <intent-filter>
