--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VoucherDetailActivity"></activity>
+        <activity android:name=".RestaurantInfoReviewListActivity"></activity>
+        <activity android:name=".RestaurantMenuActivity" />
+        <activity android:name=".VoucherDetailActivity" />
         <activity
             android:name=".SearchResultActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
