--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RedeemVoucherActivity"></activity>
+        <activity android:name=".Booking_form"></activity>
+        <activity android:name=".RedeemVoucherActivity" />
         <activity android:name=".RestaurantInfoReviewListActivity" />
         <activity android:name=".RestaurantMenuActivity" />
         <activity android:name=".VoucherDetailActivity" />
