--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PaymentDetailActivity"></activity>
+        <activity android:name=".HistoryDetailActivity"></activity>
+        <activity android:name=".PaymentDetailActivity" />
         <activity android:name=".ConfirmPaymentActivity" />
         <activity android:name=".PaymentMethodActivity" />
         <activity android:name=".EditProfileActivity" />
